<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/schedule_table"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:shrinkColumns="1,2"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/header_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/table_header_1"
            android:id="@+id/table_header_1"
            android:textColor="@android:color/primary_text_light"
            android:textStyle="bold"
            android:gravity="left" />

        <TextView
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/table_header_2"
            android:id="@+id/table_header_2"
            android:textColor="@android:color/primary_text_light"
            android:textStyle="bold"
            android:gravity="left" />

        <TextView
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/table_header_3"
            android:id="@+id/table_header_3"
            android:textColor="@android:color/primary_text_light"
            android:textStyle="bold"
            android:gravity="left" />

        <TextView
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/table_header_4"
            android:id="@+id/table_header_4"
            android:textColor="@android:color/primary_text_light"
            android:textStyle="bold"
            android:gravity="left" />

        <TextView
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/table_header_5"
            android:id="@+id/table_header_5"
            android:textColor="@android:color/primary_text_light"
            android:textStyle="bold"
            android:gravity="left" />
    </TableRow>
    <View
        android:id="@+id/tableLine"
        android:layout_height="1dip"
        android:background="@color/colorPrimary">

    </View>
</TableLayout>