<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/content_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mz.co.barclays.barclaysloansimulator.AboutActivity"
    tools:showIn="@layout/activity_about">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_header"
        android:textSize="@dimen/text_subheading_size"
        android:id="@+id/about_header"
        android:textStyle="bold"
        android:minHeight="@dimen/text_subheading_height"
        android:textColor="@color/text_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_body"
        android:textSize="@dimen/text_body_size"
        android:lineSpacingExtra="2dp"
        android:id="@+id/about_body"
        android:textColor="@color/text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_subheading_size"
            android:text="@string/about_disclaimer_header"
            android:lineSpacingExtra="2dp"
            android:textStyle="bold"
            android:textColor="@color/text_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_disclaimer"
        android:textSize="@dimen/text_body_size"
        android:lineSpacingExtra="2dp"
        android:id="@+id/about_disclaimer"
        android:textColor="@color/text_color" />
    </LinearLayout>
</LinearLayout>
