<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContactActivity"
    tools:showIn="@layout/activity_contact"
    android:background="@color/content_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_header"
            android:textSize="@dimen/text_subheading_size"
            android:id="@+id/about_header"
            android:textStyle="bold"
            android:minHeight="@dimen/text_subheading_height"
            android:layout_gravity="center"
            android:textAppearance="@style/textColor"
            android:textColor="@color/text_color" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_email_desc"
                android:textSize= "@dimen/text_body_size"
                android:id="@+id/contact_body1"
                android:minHeight="@dimen/text_body_height"
                android:paddingRight="2dp"
                android:textAppearance="@style/textColor"
                android:textColor="@color/text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_email"
                android:id="@+id/textView13"
                android:textColor="@color/text_color" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_number_desc"
                android:textSize="@dimen/text_body_size"
                android:id="@+id/contact_body2"
                android:minHeight="@dimen/text_body_height"
                android:paddingRight="2dp"
                android:textAppearance="@style/textColor"
                android:textColor="@color/text_color" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_number2"
                    android:id="@+id/textView16"
                    android:singleLine="true"
                    android:textColor="@color/text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_number1"
                    android:id="@+id/textView14"
                    android:paddingRight="2dp"
                    android:textColor="@color/text_color" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
