<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:scrollbars="vertical"
    android:layout_height="match_parent">

    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical">
    <TableLayout
        android:id="@+id/schedule_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/header_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:text="@string/table_header_1"
                android:id="@+id/table_header_1"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/table_header_2"
                android:id="@+id/table_header_2"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_marginRight="4dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/table_header_3"
                android:id="@+id/table_header_3"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/table_header_4"
                android:id="@+id/table_header_4"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/table_header_5"
                android:id="@+id/table_header_5"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold"
                android:layout_gravity="left" />
        </TableRow>
        <View
            android:id="@+id/tableLine"
            android:layout_height="1dip"
            android:background="@color/colorPrimary">

        </View>
    </TableLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="65dp"></View>
        </LinearLayout>
</ScrollView>
</LinearLayout>