<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mz.co.barclays.barclaysloansimulator.VersionActivity"
    tools:showIn="@layout/activity_version"
    android:background="@color/content_background">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="60dp"

        app:cardElevation="2dp">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:paddingRight="8dp"
    android:paddingLeft="8dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_header"
        android:textSize="@dimen/text_subheading_size"
        android:id="@+id/version_header"
        android:textStyle="bold"
        android:minHeight="@dimen/text_subheading_height"
        android:textColor="@color/text_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_body1"
        android:textSize="@dimen/text_body_size"
        android:id="@+id/version_body1"
        android:minHeight="@dimen/text_body_height"
        android:textAlignment="center"
        android:textColor="@color/text_color" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_body2"
        android:textSize="@dimen/text_body_size"
        android:id="@+id/version_body2"
        android:minHeight="@dimen/text_body_height"
        android:textAlignment="center"
        android:textColor="@color/text_color" />

</LinearLayout>
</android.support.v7.widget.CardView>
</LinearLayout>
