<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/loan_amount_description"
                android:textStyle="bold"
                android:textSize="16sp"
                
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/loan_amount_detail"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/interest_amount_description"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="3.5%"
                android:id="@+id/interest_rate_detail"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/loan_term_description"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="12 months"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/loan_term_detail"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <!--<LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/contribution_description"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/textView7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/contribution_detail"
                android:layout_marginLeft="10dp" />
        </LinearLayout>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
       android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_monthly_payment"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/monthly_payment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/monthly_payment_description"
                android:textSize="16sp"
                android:text="1.699,00"
                android:inputType="numberDecimal"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_efective_interest"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/efective_interest"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/efective_interest_description"
                android:text="3.67%"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_total_interest"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/total_interest"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_interest_description"
                android:text="399.90"
                android:inputType="number"
                android:textSize="16sp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_total_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/total_amount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_amount_description"
                android:text="20,3990.00"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />
        </android.support.design.widget.TextInputLayout>
        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="right"
            android:onClick="saveLoan"
            />

    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"></View>
    </LinearLayout>
    </ScrollView>
</LinearLayout>